Bugfix, media query causing footer to jump below 765px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,6 +478,8 @@ input:focus{
 
 
     /*-----------------------Footer Media queries--------------------------*/
+    
+    
     .footer-row button {
         display: none;
     }
@@ -488,14 +490,6 @@ input:focus{
     }
 
     /*-----------------------Home pages Media queries--------------------------*/
-    .home-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-    }
 
     .home-container .spash-image{
         width: 500px;
